--- a/estilos/style.css
+++ b/estilos/style.css
@@ -38,6 +38,9 @@ section#login{
     transform: translate(-50%, -50%);
 
     overflow: hidden;
+
+    transition: width 0.5s, height 0.5s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem{
