--- a/estilos/style.css
+++ b/estilos/style.css
@@ -28,7 +28,7 @@ main{
 section#login{
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 510px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
 
@@ -63,4 +63,51 @@ div#formulario > h1{
 
 div#formulario > p{
     font-size: 0.8em;
+}
+
+form > div.campo{
+    background-color: #5f2c82;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+form div.campo label{
+    display: none;
+}
+
+form > input[type=submit]{
+    display: block;
+    width: 100%;
+    height: 40px;
+    font-size: 1em;
+    background-color: #49a09d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover{
+    background-color: #2d6462;
+}
+
+form > button.forgotpassword{
+    display: block;
+    width: 100%;
+    height: 40px;
+    margin-top: 5px;
+    background-color: white;
+    color: #2d6462;
+    border: 1px solid #2d6462;
+    border-radius: 5px;
+}
+
+form > button.forgotpassword > i{
+    font-size: 1em;
+}
+
+form > button.forgotpassword:hover{
+    background-color: #49a09d;
+    color: #2d6462;
 }
