--- a/estilos/style.css
+++ b/estilos/style.css
@@ -9,8 +9,8 @@
 *{
     margin: 0px;
     padding: 0px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 html, body{
@@ -33,12 +33,12 @@ section#login{
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
 
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 
     overflow: hidden;
 
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     transition: width 0.5s, height 0.5s;
     transition-timing-function: ease;
 }
@@ -67,13 +67,37 @@ div#formulario > p{
 
 form > div.campo{
     background-color: #5f2c82;
+    border: 2px solid #5f2c82;
     height: 40px;
     border-radius: 5px;
     margin: 5px 0px;
 }
 
-form div.campo label{
+div.campo label{
     display: none;
+}
+
+div.campo > i{
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input{
+    background-color: #94cfcd;
+    font-size: 1em;
+    width: calc(100% - 45px);
+    height: 100%;
+    border: none;
+    border-radius: 5px;
+    padding: 4px;
+    transform: translate(1px, -12px);
+}
+
+div.campo > input:focus{
+    background-color: white;
+    outline: none;
 }
 
 form > input[type=submit]{
